--- a/views/content/healthyaging.html
+++ b/views/content/healthyaging.html
@@ -8,10 +8,13 @@
   <div class="container">
     <div class="get-up brand-brown-bg relate">
       <h2 class="text-center text-bold brand-brown-dark health-heading">HEALTHY AGING</h2>
-      <!-- <p class="white health-descp">
-        This is a happy but a hectic and phase in woman’s life. She is juggling between taking care of her young one and herself. We offer personalized diet chart for lactation that takes care of your nutritional requirements during this phase and also help you
-        shed those extra kilos in the right way.
-      </p> -->
+      <p class="white health-descp">
+        The skin is window to our health. But a legion of forces, including the environment and age, interfere
+  with regenerating process of skin. We provide you with the right food choices and certain lifestyle
+  alterations along with introduction new age vitamins and minerals into your diet. Anti-aging doesn't not
+  only mean infusion of good food and vitamins, we also suggest the right fitness program and sleep cycle 
+  to help your body remain stronger.
+      </p>
     </div>
     <div class="health-chart">
       <div class="row">
