--- a/views/content/pregnancy.html
+++ b/views/content/pregnancy.html
@@ -8,10 +8,12 @@
   <div class="container">
     <div class="get-up brand-brown-bg relate">
       <h2 class="text-center text-bold brand-brown-dark health-heading">PREGNANCY</h2>
-      <!-- <p class="white health-descp">
-        This is a happy but a hectic and phase in woman’s life. She is juggling between taking care of her young one and herself. We offer personalized diet chart for lactation that takes care of your nutritional requirements during this phase and also help you
-        shed those extra kilos in the right way.
-      </p> -->
+      <p class="white health-descp">
+        The nine months are the most challenging months of your life. With your body undergoing a number of
+changes, you need to be extra careful about yourself as well as your surroundings. And watching your
+diet should on top of your list. Start with the basics in pregnancy nutrition. Understanding what foods to 
+avoid during pregnancy can help you make the healthiest choices for you and your baby.
+      </p>
     </div>
     <div class="health-chart">
       <div class="row">
