--- a/views/content/team.html
+++ b/views/content/team.html
@@ -168,7 +168,7 @@
         </div>
       </div>
 
-      <div class="single-member">
+      <!-- <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
             <div class="member-image round">
@@ -186,14 +186,7 @@
             </div>
           </div>
         </div>
-      </div>
-
-    </div>
-  </div>
-
-  <div class="team-members" ng-show="teamtwo">
-    <div class="container">
-
+      </div> -->
       <div class="single-member">
         <div class="row">
           <div class="col-md-2 col-sm-3">
@@ -212,6 +205,11 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+
+  <div class="team-members" ng-show="teamtwo">
+    <div class="container">
 
       <div class="single-member">
         <div class="row">
