--- a/views/content/weightmanagement.html
+++ b/views/content/weightmanagement.html
@@ -15,12 +15,10 @@
       <div class="row">
         <div class="col-md-offset-1 col-md-10 col-sm-12">
           <div class="health-tab healthchart-list">
-            <div class="inline-block v-top align">
-              <div class="get-round weight-round">
-                <span class="text-uppercase brand-brown-dark-bg lost">month</span>
-                <p>
-                  <span class="weight-number font-vista">1</span>
-                </p>
+            <div class="inline-block v-top">
+              <div class="consult-chart relate inline-block text-center">
+                <span class="noconsult brand-brown-dark font-semibold">1</span>
+                <span class="text-uppercase white month font-gotham-bold">Month</span>
               </div>
             </div>
             <div class="tab-chart">
@@ -28,7 +26,7 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head">
-                      <p class="white text-bold text-uppercase">visits</p>
+                      <p class="white text-bold text-uppercase">consults</p>
                       <p class="price">4</p>
                     </div>
                   </uib-tab-heading>
@@ -194,12 +192,10 @@
             </div>
           </div>
           <div class="healthchart-list">
-            <div class="inline-block v-top align">
-              <div class="get-round  weight-round">
-                <span class="text-uppercase brand-brown-dark-bg lost">months</span>
-                <p>
-                  <span class="weight-number font-vista">2</span>
-                </p>
+            <div class="inline-block v-top">
+              <div class="consult-chart relate inline-block text-center">
+                <span class="noconsult brand-brown-dark font-semibold">2</span>
+                <span class="text-uppercase white month font-gotham-bold">Months</span>
               </div>
             </div>
             <div class="tab-chart">
@@ -207,7 +203,7 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head">
-                      <p class="white text-bold text-uppercase">visits</p>
+                      <p class="white text-bold text-uppercase">consults</p>
                       <p class="price">8
                       </p>
                     </div>
@@ -374,12 +370,10 @@
             </div>
           </div>
           <div class="healthchart-list">
-            <div class="inline-block v-top align">
-              <div class="get-round  weight-round">
-                <span class="text-uppercase brand-brown-dark-bg lost">months</span>
-                <p>
-                  <span class="weight-number font-vista">3</span>
-                </p>
+            <div class="inline-block v-top">
+              <div class="consult-chart relate inline-block text-center">
+                <span class="noconsult brand-brown-dark font-semibold">3</span>
+                <span class="text-uppercase white month font-gotham-bold">Months</span>
               </div>
             </div>
             <div class="tab-chart">
@@ -387,7 +381,7 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head">
-                      <p class="white text-bold text-uppercase">visits</p>
+                      <p class="white text-bold text-uppercase">consults</p>
                       <p class="price">13
                       </p>
                     </div>
@@ -554,12 +548,10 @@
             </div>
           </div>
           <div class="healthchart-list">
-            <div class="inline-block v-top align">
-              <div class="get-round  weight-round">
-                <span class="text-uppercase brand-brown-dark-bg lost">months</span>
-                <p>
-                  <span class="weight-number font-vista">4</span>
-                </p>
+            <div class="inline-block v-top">
+              <div class="consult-chart relate inline-block text-center">
+                <span class="noconsult brand-brown-dark font-semibold">4</span>
+                <span class="text-uppercase white month font-gotham-bold">Months</span>
               </div>
             </div>
             <div class="tab-chart">
@@ -567,7 +559,7 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head">
-                      <p class="white text-bold text-uppercase">visits</p>
+                      <p class="white text-bold text-uppercase">consults</p>
                       <p class="price">17</p>
                     </div>
                   </uib-tab-heading>
@@ -733,12 +725,10 @@
             </div>
           </div>
           <div class="healthchart-list">
-            <div class="inline-block v-top align">
-              <div class="get-round  weight-round">
-                <span class="text-uppercase brand-brown-dark-bg lost">months</span>
-                <p>
-                  <span class="weight-number font-vista">6</span>
-                </p>
+            <div class="inline-block v-top">
+              <div class="consult-chart relate inline-block text-center">
+                <span class="noconsult brand-brown-dark font-semibold">6</span>
+                <span class="text-uppercase white month font-gotham-bold">Months</span>
               </div>
             </div>
             <div class="tab-chart">
@@ -746,7 +736,7 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head">
-                      <p class="white text-bold text-uppercase">visits</p>
+                      <p class="white text-bold text-uppercase">consults</p>
                       <p class="price">26 </p>
                     </div>
                   </uib-tab-heading>
