--- a/views/header.html
+++ b/views/header.html
@@ -45,7 +45,7 @@
                     <li><a href="https://twitter.com/selfcarebysuman" target="_blank"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="https://www.instagram.com/selfcarebysuman" target="_blank"><i class="fa fa-instagram"></i></a></li>
                     <li><a href="https://www.youtube.com/channel/UCVqKgmC6eaMrgPyXoOcOz2A" target="_blank"><i class="fa fa-youtube"></i></a></li>
-                    <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest-p"></i></a></li>
+                    <li><a href="https://www.pinterest.com/selfcarebysuman" target="_blank"><i class="fa fa-pinterest-p"></i></a></li>
                   </ul>
                 </div>
               </div>
