--- a/views/content/ailmentcontrol.html
+++ b/views/content/ailmentcontrol.html
@@ -8,10 +8,15 @@
   <div class="container">
     <div class="get-up brand-brown-bg relate">
       <h2 class="text-center text-bold brand-brown-dark health-heading">AILMENT CONTROL</h2>
-      <!-- <p class="white health-descp">
-        This is a happy but a hectic and phase in woman’s life. She is juggling between taking care of her young one and herself. We offer personalized diet chart for lactation that takes care of your nutritional requirements during this phase and also help you
-        shed those extra kilos in the right way.
-      </p> -->
+      <p class="white health-descp">
+        Many ailments and health complaints can be rectified and reversed with a simple and nutritious diet.
+The right health management plan can contribute significantly to recovery from lifestyle, hormonal and
+genetics-related disorders. We provide tailor-made diet plans to overcome a range of health and well-
+being complaints (see list below) after examining stipulated blood tests to see if you are genetically pre-
+disposed to any health complaints. Along with nutritional advice, we recommend vitamins to help keep
+
+future disorders at bay.
+      </p>
     </div>
     <div class="health-chart">
       <div class="row">
