--- a/views/content/cancersupport.html
+++ b/views/content/cancersupport.html
@@ -8,10 +8,13 @@
   <div class="container">
     <div class="get-up brand-brown-bg relate">
       <h2 class="text-center text-bold brand-brown-dark health-heading">CANCER SUPPORT</h2>
-      <!-- <p class="white health-descp">
-        This is a happy but a hectic and phase in woman’s life. She is juggling between taking care of her young one and herself. We offer personalized diet chart for lactation that takes care of your nutritional requirements during this phase and also help you
-        shed those extra kilos in the right way.
-      </p> -->
+      <p class="white health-descp">
+        Cancer is the uncontrolled growth of abnormal cells in the body. Cancerous cells are also  called
+malignant cells. During the disease there many medical treatments that can cause general weakness,
+hair loss, loss of appetite etc. Post cancer diet is devised keeping in mind the right balance of
+carbohydrate, protein and fat requirement by the body. We also believe that right support of vitamins 
+play an important role to improve one’s immunity post cancer.
+      </p>
     </div>
     <div class="health-chart">
       <div class="row">
