--- a/views/content/postpregnancy.html
+++ b/views/content/postpregnancy.html
@@ -8,10 +8,10 @@
   <div class="container">
     <div class="get-up brand-brown-bg relate">
       <h2 class="text-center text-bold brand-brown-dark health-heading">POST PREGNANCY WEIGHT LOSS WITH LACTATION</h2>
-      <!-- <p class="white health-descp">
-        This is a happy but a hectic and phase in woman’s life. She is juggling between taking care of her young one and herself. We offer personalized diet chart for lactation that takes care of your nutritional requirements during this phase and also help you
-        shed those extra kilos in the right way.
-      </p> -->
+      <p class="white health-descp">
+        This is a happy but a hectic and phase in woman’s life. She is juggling between taking care of her young one and herself.  We offer personalized diet chart for lactation that takes care of your nutritional requirements during this phase and also help
+        you shed those extra kilos in the right way.
+      </p>
     </div>
     <div class="health-chart">
       <div class="row">
@@ -904,25 +904,27 @@
                   </div>
                 </uib-tab>
               </uib-tabset>
-              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="slider-round">
-        <uib-carousel interval="myInterval" no-wrap="noWrapSlides">
-          <uib-slide ng-repeat="slide in healthdetail" active="slide.active">
-            <div class="healthmanagement-slider">
-              <div class="row">
-                <div class="col-md-4 col-sm-4 col-xs-4" ng-repeat="detail in slide">
-                  <a ui-sref="{{detail.link}}"><figure>
+    </div>
+    <div class="slider-round">
+      <uib-carousel interval="myInterval" no-wrap="noWrapSlides">
+        <uib-slide ng-repeat="slide in healthdetail" active="slide.active">
+          <div class="healthmanagement-slider">
+            <div class="row">
+              <div class="col-md-4 col-sm-4 col-xs-4" ng-repeat="detail in slide">
+                <a ui-sref="{{detail.link}}">
+                  <figure>
                     <div class="slide-imghold round m-center">
                       <img ng-src="{{detail.img}}" alt="" class="img-responsive">
                     </div>
                     <figcaption class="text-uppercase brand-brown-dark text-bold letter-space">{{detail.caption}}</figcaption>
-                    </figure></a>
-                </div>
-                <!-- <div class="col-md-4">
+                  </figure>
+                </a>
+              </div>
+              <!-- <div class="col-md-4">
                   <figure>
                   <div class="slide-imghold round m-center">
                     <img ng-src="{{slide.img}}" alt="" class="img-responsive">
@@ -940,8 +942,8 @@
                 </div>
               </div> -->
             </div>
-          </uib-slide>
-        </uib-carousel>
+        </uib-slide>
+      </uib-carousel>
       </div>
     </div>
   </div>
