--- a/views/content/weightgain.html
+++ b/views/content/weightgain.html
@@ -8,10 +8,10 @@
   <div class="container">
     <div class="get-up brand-brown-bg relate">
       <h2 class="text-center text-bold brand-brown-dark health-heading">WEIGHT GAIN</h2>
-      <!-- <p class="white health-descp">
-        This is a happy but a hectic and phase in woman’s life. She is juggling between taking care of her young one and herself. We offer personalized diet chart for lactation that takes care of your nutritional requirements during this phase and also help you
-        shed those extra kilos in the right way.
-      </p> -->
+      <p class="white health-descp">
+        There is a myth that eating fried and sweets can increase weight. At Selfcare we strike the right ratio of
+carbohydrate rich  and protein rich foods to gain muscle mass, improve good fat  in the body and help you gaining weight with perfect combination of exercise.
+      </p>
     </div>
     <div class="health-chart">
       <div class="row">
