--- a/views/content/weightlossforkids.html
+++ b/views/content/weightlossforkids.html
@@ -8,10 +8,11 @@
   <div class="container">
     <div class="get-up brand-brown-bg relate">
       <h2 class="text-center text-bold brand-brown-dark health-heading">WEIGHT LOSS FOR KIDS</h2>
-      <!-- <p class="white health-descp">
-        This is a happy but a hectic and phase in woman’s life. She is juggling between taking care of her young one and herself. We offer personalized diet chart for lactation that takes care of your nutritional requirements during this phase and also help you
-        shed those extra kilos in the right way.
-      </p> -->
+      <p class="white health-descp">
+        In our present times, with our stressful and hectic routines, health and the foods we eat have come to
+occupy a central place in our lives. It’s no longer like the olden days when children ate whatever their
+mothers gave them, and everything the mothers cooked was healthy and organic. At Selfacare we explore the struggles that parents face to provide the right nutrition to their school- and college-going kids. I have therefore included healthy twist for children so that they are always excited about meal times!
+      </p>
     </div>
     <div class="health-chart">
       <div class="row">
