--- a/views/footer.html
+++ b/views/footer.html
@@ -54,6 +54,7 @@
                         <ul>
                             <li><a href="#/knowyourstats" title="Calorie Meter">CALORIE METER</a></li>
                             <li> <a href="#/recipes" title="Recipes">RECIPES</a></li>
+                            <li><a href="#/" title="Restaurant Menus">RESTAURANT MENUS</a></li>
                         </ul>
                     </div>
                 </div>
@@ -83,7 +84,7 @@
                             <li><a href="https://twitter.com/selfcarebysuman" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="https://www.instagram.com/selfcarebysuman" target="_blank"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="https://www.youtube.com/channel/UCVqKgmC6eaMrgPyXoOcOz2A" target="_blank"><i class="fa fa-youtube"></i></a></li>
-                            <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest-p"></i></a></li>
+                            <li><a href="https://www.pinterest.com/selfcarebysuman" target="_blank"><i class="fa fa-pinterest-p"></i></a></li>
                         </ul>
                     </div>
                     <div class="copyright brand-brown-dark letter-space">
