--- a/views/content/account.html
+++ b/views/content/account.html
@@ -1,1 +1,30 @@
-<h2>fchdjhk</h2>
+<section class="account">
+  <div class="selfcare-image">
+    <img src="img/banners/account.jpg" alt="">
+    <h2 class="text-uppercase get-center white font-semibold">selfcare 'tv'</h2>
+  </div>
+  <div class="account-main">
+    <div class="container">
+      <div class="account-tab">
+        <uib-tabset>
+          <uib-tab>
+            <uib-tab-heading><span class="text-uppercase">my profile</span></uib-tab-heading>
+            <div class="profile-tab">
+              <h3 class="text-uppercase brand-brown-dark">your details</h3>
+              <form action="" class="form-inline">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+              </form>
+            </div>
+          </uib-tab>
+          <uib-tab>
+            <uib-tab-heading><span class="text-uppercase">order list</span></uib-tab-heading>
+            <div class="order-tab"></div>
+          </uib-tab>
+        </uib-tabset>
+      </div>
+    </div>
+  </div>
+</section>
