--- a/views/content/careers.html
+++ b/views/content/careers.html
@@ -1,1 +1,11 @@
-<h2>fchdjhk</h2>
+<section class="careers">
+  <div class="selfcare-image">
+        <img src="img/banners/careers.jpg" alt="">
+    <h2 class="text-uppercase get-center white font-semibold">Careers</h2>
+  </div>
+  <div class="careers-main">
+    <div class="container">
+      <h2 class="text-center">If you wish to join in please contact us <a href="mailto:selfcareindia.com" class="block">@ selfcareindia.com</a></h2>
+    </div>
+  </div>
+</section>
