--- a/views/content/wentwrong.html
+++ b/views/content/wentwrong.html
@@ -1,14 +1,14 @@
 <section class="went-wrong">
   <div class="container">
     <div class="on-page text-center">
-      <div>
-        <img ng-src="img/ohno.png" class="img-responsive" />
+      <div class="wrong-imgholder">
+        <img ng-src="img/ohno.png" class="img-responsive m-center" />
       </div>
-      <p class="text-uppercase ty-detail">Transition id:</p>
-      <span class="text-uppercase ty1">FU64354655</span>
+      <h3 class="text-uppercase ty-detail brand-brown-dark letter-space text-bold">Transaction id:</h3>
+      <span class="text-uppercase transaction btn btn-primary letter-space">FU64354655</span>
 
-      <p class="text-uppercase">Your order has been processed</p>
-      <a ui-sref="cart()" class="text-uppercase on-link">Continue Shopping</a>
+      <h3 class="text-uppercase brand-brown-dark letter-space text-bold process">Your order could not be processed</h3>
+      <a href="#/healthproducts/1" class="text-uppercase btn btn-primary letter-space">Continue Shopping</a>
     </div>
   </div>
 </section>
