--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2350,6 +2350,19 @@ footer {
     font-size: 60px;
   }
 // end selfcare tv//
+// error thankyou went wrong
+.error,
+.went-wrong,
+.thankyou { margin: 60px 0; }
+.error-imgholder,
+.wrong-imgholder { margin: 20px 0px 90px; }
+.error h3 { margin-bottom: 20px; }
+.err-link { padding: 12px 42px; }
+.transaction {  padding: 8px 24px; }
+.process { margin: 60px 0 15px; }
+.bag { margin: 50px 0px 90px; }
+.put-center { margin-top: 70px; }
+
 @import "harsh";
 @import "mobile";
 @import "mobile_harsh";
