--- a/views/content/error.html
+++ b/views/content/error.html
@@ -1,12 +1,11 @@
 <section class="error">
   <div class="container">
-
     <div class="err-page text-center">
-      <div>
-        <img ng-src="img/error.png" class="img-responsive" />
-      </div>
-      <p class="text-uppercase">We could not find that, sorry</p>
-      <a ui-sref="home()" class="text-uppercase err-link">Homepage</a>
+        <div class="error-imgholder">
+          <img ng-src="img/error.png" class="img-responsive m-center" />
+        </div>
+      <h3 class="text-uppercase brand-brown-dark text-bold letter-space">We could not find that, sorry</h3>
+      <a ui-sref="home()" class="text-uppercase err-link btn btn-primary letter-space">Homepage</a>
     </div>
   </div>
 </section>
