--- a/views/content/thankyou.html
+++ b/views/content/thankyou.html
@@ -1,29 +1,31 @@
 <section class="thankyou">
   <div class="container">
     <div class="ty text-center">
-      <div class="ty-head">
-        <div class="inl text-uppercase">
-          <span>Thank You</span>
-          <p>for shopping</p>
-          <p>with us</p>
-        </div>
+      <div class="thank-imgholder">
+        <img src="img/thankyou.png" alt="" class="img-responsive m-center">
       </div>
-      <div class="row">
-        <div class="col-md-4">
-          <p class="text-uppercase ty-detail">Transaction ID:</p>
-          <span class="text-uppercase ty1">FU64354655</span>
-        </div>
-        <div class="col-md-4">
-          <img ng-src="img/cart.png" class="img-responsive">
-        </div>
-        <div class="col-md-4">
-          <p class="text-uppercase ty-detail1">Total Amount:</p>
-          <span class="text-uppercase ty2">Rs. 375.00</span>
+      <div class="bag">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="put-center">
+              <h3 class="text-uppercase ty-detail text-bold letter-space brand-brown-dark">Transaction ID:</h3>
+              <span class="text-uppercase ty1 transaction btn btn-primary letter-space">FU64354655</span>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <img ng-src="img/cart.png" class="img-responsive m-center">
+          </div>
+          <div class="col-md-4">
+            <div class="put-center">
+              <h3 class="text-uppercase ty-detail1 text-bold letter-space brand-brown-dark">Total Amount:</h3>
+              <span class="text-uppercase ty2 transaction btn btn-primary letter-space">Rs. 375.00</span>
+            </div>
+          </div>
         </div>
       </div>
       <div>
-        <p class="text-uppercase ty-desp">Your order has been processed</p>
-        <a ui-sref="cart()" class="text-uppercase ty-link">Continue Shopping</a>
+        <h3 class="text-uppercase ty-desp brand-brown-dark letter-space text-bold process">Your order has been processed</h3>
+        <a ui-sref="cart()" class="text-uppercase ty-link btn btn-primary letter-space">Continue Shopping</a>
       </div>
     </div>
   </div>
