--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -227,7 +227,7 @@
           </uib-tab-heading>
           <p class="brand-primary letter-space" ng-show = "cod">Thank you for Shopping with us</p>
           <p class="brand-primary letter-space" ng-hide = "cod">Payment Details</p>
-          <form method="post" name="customerData" ng-hide = "cod" action="http://www.myfynx.com/newfynx/paymentgateway/ccavRequestHandler.php">
+          <form method="post" name="customerData" ng-hide = "cod" action="http://moviewsapp.com/selfcare/paymentgateway/ccavRequestHandler.php">
 							<table width="40%" height="100">
 								<tr style="display:none">
 									<td>TID	:</td><td><input type="text" name="tid" ng-model="order" readonly /></td>
@@ -245,39 +245,39 @@
 									<td>Currency	:</td><td><input type="text" name="currency" value="INR"/></td>
 								</tr>
 								<tr style="display:none">
-									<td>Redirect URL	:</td><td><input type="text" name="redirect_url" value="http://www.myfynx.com/newfynx/index.php/json/payumoneysuccess"/></td>
+									<td>Redirect URL	:</td><td><input type="text" name="redirect_url" value="http://wohlig.co.in/selfcare/#/thankyou"/></td>
 								</tr>
 							 	<tr style="display:none">
-							 		<td>Cancel URL	:</td><td><input type="text" name="cancel_url" value="http://www.myfynx.com/testing"/></td>
+							 		<td>Cancel URL	:</td><td><input type="text" name="cancel_url" value="http://wohlig.co.in/selfcare/#/thankyou"/></td>
 							 	</tr>
 							 	<tr style="display:none">
 									<td>Language	:</td><td><input type="text" name="language" value="EN"/></td>
 								</tr>
-						     	<tr>
+						     	<!-- <tr>
 						     		<td colspan="2">Billing information:</td>
-						     	</tr>
-						        <tr>
+						     	</tr> -->
+						        <tr style="display:none">
 						        	<td>Billing Name	:</td><td><input type="text" name="billing_name" style="border: none; width: 100%;" ng-model="checkout.firstname"/></td>
 						        </tr>
-						        <tr>
+						        <tr style="display:none">
 						        	<td>Billing Address	:</td><td><input type="text" name="billing_address" style="border: none; width: 100%;"  ng-model="checkout.shippingaddress"/></td>
 						        </tr>
-						        <tr>
+						        <tr style="display:none">
 						        	<td>Billing City	:</td><td><input type="text" name="billing_city" style="border: none; width: 100%;" ng-model="checkout.shippingcity"/></td>
 						        </tr>
-						        <tr>
+						        <tr style="display:none">
 						        	<td>Billing State	:</td><td><input type="text" name="billing_state" style="border: none; width: 100%;" ng-model="checkout.shippingstate"/></td>
 						        </tr>
-						        <tr>
+						        <tr style="display:none">
 						        	<td>Billing Zip	:</td><td><input type="text" name="billing_zip" style="border: none; width: 100%;" ng-model="checkout.shippingpincode"/></td>
 						        </tr>
-						        <tr>
+						        <tr style="display:none">
 						        	<td>Billing Country	:</td><td><input type="text" name="billing_country" style="border: none; width: 100%;" value = "India"/></td>
 						        </tr>
-						        <tr>
+						        <tr style="display:none">
 						        	<td>Billing Tel	:</td><td><input type="text" name="billing_tel" style="border: none; width: 100%;" ng-model="checkout.shippingcontact"/></td>
 						        </tr>
-						        <tr>
+						        <tr style="display:none">
 						        	<td>Billing Email	:</td><td><input type="text" name="billing_email" style="border: none; width: 100%;" ng-model="checkout.email"/></td>
 						        </tr>
 						        <tr>
