--- a/views/content/thankyou.html
+++ b/views/content/thankyou.html
@@ -25,7 +25,7 @@
       </div>
       <div>
         <h3 class="text-uppercase ty-desp brand-brown-dark letter-space text-bold process">Your order has been processed</h3>
-        <a ui-sref="cart()" class="text-uppercase ty-link btn btn-primary letter-space">Continue Shopping</a>
+        <a href="#/healthproducts/1" class="text-uppercase ty-link btn btn-primary letter-space">Continue Shopping</a>
       </div>
     </div>
   </div>
