--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -73,8 +73,87 @@
               </thead>
             </table>
           </div>
-          <div class="checkout-main">
-            <div class="row">
+          <div class="checkout-main profile-tab">
+              <h3 class="text-uppercase brand-brown-dark letter-space">your details</h3>
+              <form action="" class="form-inline details">
+                <div class="form-group">
+                  <input type="text" placeholder="First Name *" class="form-control">
+                </div>
+                <div class="form-group">
+                  <input type="text" placeholder="Last Name *" class="form-control">
+                </div>
+                <div class="form-group">
+                  <input type="tel" placeholder="Mobile Number *" class="form-control">
+                </div>
+                <div class="form-group">
+                  <input type="email" placeholder="Email *" class="form-control">
+                </div>
+              </form>
+              <div class="address">
+                <div class="row">
+                  <div class="col-md-4">
+                    <h3 class="text-uppercase brand-brown-dark letter-space inline-block">billing address</h3>
+                    <form action="">
+                      <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Line 1 *">
+                      </div>
+                      <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Line 2 *">
+                      </div>
+                      <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Line 3 *">
+                      </div>
+                      <div class="form-group">
+                        <input type="text" class="form-control" placeholder="City *">
+                      </div>
+                      <div class="form-group">
+                        <div class="custom-select">
+                          <select name="" id="">
+                            <option value="">State *</option>
+                          </select>
+                          <span></span>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Country *">
+                      </div>
+                    </form>
+                  </div>
+                  <div class="col-md-offset-2 col-md-4">
+                    <h3 class="text-uppercase brand-brown-dark letter-space inline-block">shipping address</h3>
+                    <div class="checkbox">
+                      <input type="checkbox" class="text-uppercase" id="same">
+                      <label for="same" class="same-bill"> <span></span> Same as billing address</label>
+                    </div>
+                    <form action="">
+                      <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Line 1 *">
+                      </div>
+                      <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Line 2 *">
+                      </div>
+                      <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Line 3 *">
+                      </div>
+                      <div class="form-group">
+                        <input type="text" class="form-control" placeholder="City *">
+                      </div>
+                      <div class="form-group">
+                        <div class="custom-select">
+                          <select name="" id="">
+                            <option value="">State *</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Country *">
+                      </div>
+                    </form>
+                  </div>
+                </div>
+                <a href="" class="text-uppercase btn btn-primary" ng-click="proceedToSummary(user,shippingForm)">Save &amp; Continue</a>
+              </div>
+            <!-- <div class="row">
               <div class="col-md-4">
                 <h5 class="brand-primary">Enter a new shipping address</h5>
                 <form  name="shippingForm">
@@ -117,7 +196,7 @@
                   <a href="" class="text-uppercase btn btn-primary" ng-click="proceedToSummary(user,shippingForm)">Save &amp; Continue</a>
                 </form>
               </div>
-            </div>
+            </div> -->
           </div>
         </uib-tab>
         <uib-tab active="tabs[2].active" disable="tabs[2].disabled">
