--- a/views/content/account.html
+++ b/views/content/account.html
@@ -25,14 +25,14 @@
                   <input type="email" placeholder="Email *" class="form-control">
                 </div>
                 <div class="form-group">
-                  <button class="btn btn-primary-inverse text-uppercase" type="button">Edit</button>
+                  <button class="btn btn-primary-inverse edit text-uppercase" type="button">Edit</button>
                 </div>
               </form>
               <div class="address">
                 <div class="row">
                   <div class="col-md-4">
                     <h3 class="text-uppercase brand-brown-dark letter-space inline-block">billing address</h3>
-                    <button class="btn btn-primary-inverse text-uppercase">Edit</button>
+                    <button class="btn btn-primary-inverse text-uppercase edit">Edit</button>
                     <form action="">
                       <div class="form-group">
                         <input type="text" class="form-control" placeholder="Line 1 *">
@@ -47,21 +47,21 @@
                         <input type="text" class="form-control" placeholder="City *">
                       </div>
                       <div class="form-group">
+                        <input type="text" class="form-control" placeholder="State *">
+                      </div>
+                      <div class="form-group">
                         <div class="custom-select">
                           <select name="" id="">
-                            <option value="">State *</option>
+                            <option value="">Country *</option>
                           </select>
                           <span></span>
                         </div>
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Country *">
                       </div>
                     </form>
                   </div>
                   <div class="col-md-offset-2 col-md-4">
                     <h3 class="text-uppercase brand-brown-dark letter-space inline-block">shipping address</h3>
-                    <button class="btn btn-primary-inverse text-uppercase" type="button">edit</button>
+                    <button class="btn btn-primary-inverse text-uppercase edit" type="button">edit</button>
                     <div class="checkbox">
                       <input type="checkbox" class="text-uppercase" id="same">
                       <label for="same" class="same-bill"> <span></span> Same as billing address</label>
@@ -80,14 +80,14 @@
                         <input type="text" class="form-control" placeholder="City *">
                       </div>
                       <div class="form-group">
-                        <div class="custom-select">
-                          <select name="" id="">
-                            <option value="">State *</option>
-                          </select>
-                        </div>
+                        <input type="text" class="form-control" placeholder="State *">
                       </div>
                       <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Country *">
+                        <div class="custom-select">
+                          <select name="" id="">
+                            <option value="">Country *</option>
+                          </select>
+                        </div>
                       </div>
                     </form>
                   </div>
