--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2374,6 +2374,7 @@ footer {
 // account
 .profile-tab {
   @extend .checkout-main;
+  h3 { margin: 0 0 25px; }
   .details {
     input { margin: 0 30px 15px 0; }
   }
@@ -2382,14 +2383,20 @@ footer {
     border-width: 2px;
     border-radius: 4px;
   }
+  .edit {
+    padding: 9px 24px;
+    border-width: 1px;
+    border-color: $brand-primary;
+    border-radius: 0;
+    margin: -17px 10px 0px;
+  }
   .address {
-    .same-bill { font-size: 15px; }
-    .checkbox { margin: 0 0 15px; }
-    .edit {
-      border: 1px solid $brand-primary;
-      border-radius: 0;
-      margin: -20px 0px 0px;
+    margin: 40px 0 0 ;
+    .same-bill {
+      padding: 0;
+      font-size: 15px;
     }
+    .checkbox { margin: 0 0 15px; }
     select {
       border: 2px solid $brand-primary;
     }
@@ -2397,10 +2404,38 @@ footer {
       &:after {
         content: "\f107";
         width: 45px;
+        font-size: 35px;
         background-color: $brand-primary;
       }
     }
 }
+}
+.account-tab {
+  margin: 20px 0 0;
+  .nav-tabs {
+    border: none;
+    text-align: center;
+    li {
+      float: none;
+      display: inline-block;
+      font-size: 25px;
+      a {
+        color: $brand-primary;
+        border: none;
+        &:hover {
+          border: none;
+          color: $brand-brown-dark;
+          background-color: transparent;
+        }
+      }
+    }
+  }
+  .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+    border: none;
+    color: $brand-brown-dark;
+    text-decoration: underline !important;
+   }
+   .tab-content { margin: 70px 0; }
 }
 
 @import "harsh";
